create github pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="header6 cid-qCg8w5Srvk mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=1BZv8Twfqdc" id="header6-l" data-rv-view="9">
+<section class="header6 cid-qCg8w5Srvk mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=1BZv8Twfqdc" id="header6-l" data-rv-view="48">
 
     
 
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="cid-qCg9Fqz2l8" id="footer1-y" data-rv-view="13">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="cid-qCg9Fqz2l8" id="footer1-y" data-rv-view="52">
 
     
 
